broken - added [[page]] for page break in preprocessor.py, but is incorrect

--- a/todo.txt
+++ b/todo.txt
@@ -70,6 +70,7 @@ fail build on violations
 
 ---
 
+
 make a clean arg that empties step 1 and step 2 directories
 
 seperate out tools/build/ python files so we have small components not a big monolith
@@ -78,6 +79,10 @@ only rebuild the ones that have changed, either from the wath trigger or by insp
 
 
 preproces [[page]]
+
+[[page empty]] if page is empty and does not say ots empty arn????
+
+[[page num=1]]
 
 add tests for overflow or whatever
 
