practice - tmp/practice has enhanced html and css (and js at the end of the html) to toggle a screenshot of the target page on and off to help layout the page to match (the image being taken from the source pdf to be copied).

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+look at googles explanation of the 6 parts involved in the debug and overlay
+merge them into the generator adding an arg that says if they are required.
+document the process from the users pov carefully
+
 overlay the page over an exactly sized image from the pdf to see the diffs!
 
 seperate the tools area and move the scripts etc in the top directory to have cclearer directories for 
